HW-6: Done