@@ -1,7 +1,5 @@
 package hw3.dto;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
@@ -15,7 +13,7 @@ public enum CharacterEnum {
     LAZY,
     SAD;
 
-    private static final List<CharacterEnum> VALUES = Collections.unmodifiableList(Arrays.asList(values()));
+    private static final List<CharacterEnum> VALUES = List.of(values());
     private static final int SIZE = VALUES.size();
     private static final Random RANDOM = new Random();
 
