@@ -1,7 +1,5 @@
 package hw3.dto.Pet;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
@@ -12,7 +10,7 @@ public enum HamsterBreeds {
     DWARF_WINTER_WHITE_RUSSIAN_HAMSTER,
     DWARF_ROBOROVSKI_HAMSTER;
 
-    private static final List<HamsterBreeds> VALUES = Collections.unmodifiableList(Arrays.asList(values()));
+    private static final List<HamsterBreeds> VALUES = List.of(values());
     private static final int SIZE = VALUES.size();
     private static final Random RANDOM = new Random();
 
